# handheld-console

./: .cproject  .gitignore  .mxproject  .project  Handheld_Console Debug.launch  Handheld_Console.ioc  README.md  STM32F413ZHTX_FLASH.ld  STM32F413ZHTX_RAM.ld
Core/Inc/: main.h  main_temp.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Inc/Application/: console_ui.h  game_controller.h
Core/Inc/Communication/: serial_comm.h  serial_comm_callbacks.h  serial_comm_protocol.h  serial_comm_types.h
Core/Inc/Console_Peripherals/: audio.h  console_peripherals_conf.h  d_pad.h  joystick.h  oled.h  oled_new.h  push_button.h  serial_comm.h  types.h
Core/Inc/Game_Engine/: game_engine.h  game_engine_conf.h  game_engine_network.h  game_menu.h
Core/Inc/Sounds/: audio_sounds.h
Core/Inc/Sprites/: pacman_sprite.h  (+3 more)
Core/Src/: main.c  main_temp.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Tests/: Makefile  all_tests.c  test.sh
Tests/Console_Peripherals/: test_audio.c  test_dpad.c  test_joystick.c  test_oled.c  test_push_button.c
Tests/Game_Engine/: test_game_engine.c  test_game_menu.c  test_pacman_game_engine.c  test_pacman_maze.c  test_snake_game_engine.c
Tests/Sprites/: test_sprite.c
docs/: SERIAL_COMM_MIGRATION.md
esp32/main/: CMakeLists.txt  main.c  uart_comm.c  uart_comm.h  websocket_client.c  websocket_client.h  wifi.c  wifi.h
esp32/main/helpers/websocket-client/: websocket_client_to_server.c  websocket_client_to_server.h  websocket_client_to_stm32.c  websocket_client_to_stm32.h
esp32_uart/: esp32_uart.ino
esp32_wifi_script/: esp32_wifi_script.ino  wifi_creds.h
(+146 files in other folders)
